Fixed some color contrast issues

--- a/src/Components/TopSellingItems/topSellingItems.css
+++ b/src/Components/TopSellingItems/topSellingItems.css
@@ -11,10 +11,10 @@ section {
 }
 
 .top-selling-item:nth-child(even) {
-    background-color: rgb(105, 188, 236);
+    background-color: rgb(89, 183, 238);
 }
 .top-selling-item:nth-child(odd) {
-    background-color: rgb(108, 174, 212);
+    background-color: rgb(100, 169, 209);
 }
 
 .top-selling-item:hover {
