--- a/src/YourProducts/yourProducts.css
+++ b/src/YourProducts/yourProducts.css
@@ -53,7 +53,7 @@
 .edit-button {
     font-size: 12px !important;
     text-decoration: underline;
-    color: blue;
+    color: black;
     align-self: center;
     margin-left: 3px;
 }
